Добавляем линтер scss и правила для i18n. Исправляем файлы

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,7 @@
 {
-    "Language": "English"
+  "Language": "English",
+  "ExpandButton": "Expand",
+  "MainLink": "Main",
+  "AboutLink": "About site",
+  "Loading": "Loading"
 }
