--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,7 @@
 {
-    "Language": "Русский"
+  "Language": "Русский",
+  "ExpandButton": "Раскрыть",
+  "MainLink": "Главная",
+  "AboutLink": "О сайте",
+  "Loading": "Загрузка"
 }
