Добавляем NotFoundPage, Loader и PageLoader

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,6 @@
   "ExpandButton": "Expand",
   "MainLink": "Main",
   "AboutLink": "About site",
-  "Loading": "Loading"
+  "Loading": "Loading",
+  "NotFoundPage": "Page not found"
 }
