--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,6 @@
   "ExpandButton": "Раскрыть",
   "MainLink": "Главная",
   "AboutLink": "О сайте",
-  "Loading": "Загрузка"
+  "Loading": "Загрузка",
+  "NotFoundPage": "Страница не найдена"
 }
