Добавил обработчика ошибок

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "MainLink": "Main",
   "AboutLink": "About site",
   "Loading": "Loading",
-  "NotFoundPage": "Page not found"
+  "NotFoundPage": "Page not found",
+  "SomethingError": "Something went wrong"
 }
