--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
   "MainLink": "Главная",
   "AboutLink": "О сайте",
   "Loading": "Загрузка",
-  "NotFoundPage": "Страница не найдена"
+  "NotFoundPage": "Страница не найдена",
+  "SomethingError": "Произошла непредвиденная ошибка"
 }
