--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "AboutLink": "About site",
   "Loading": "Loading",
   "NotFoundPage": "Page not found",
-  "SomethingError": "Something went wrong"
+  "SomethingError": "Something went wrong",
+  "AbrLanguage" : "EN"
 }
