--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
   "AboutLink": "О сайте",
   "Loading": "Загрузка",
   "NotFoundPage": "Страница не найдена",
-  "SomethingError": "Произошла непредвиденная ошибка"
+  "SomethingError": "Произошла непредвиденная ошибка",
+  "AbrLanguage" : "Рус"
 }
