Добавление модального окна и портала

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "Loading": "Loading",
   "NotFoundPage": "Page not found",
   "SomethingError": "Something went wrong",
-  "AbrLanguage" : "EN"
+  "AbrLanguage": "EN",
+  "LogIn": "Log in"
 }
