--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
   "Loading": "Загрузка",
   "NotFoundPage": "Страница не найдена",
   "SomethingError": "Произошла непредвиденная ошибка",
-  "AbrLanguage" : "Рус"
+  "AbrLanguage": "Рус",
+  "LogIn": "Войти"
 }
