--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,7 @@
   "NotFoundPage": "Страница не найдена",
   "SomethingError": "Произошла непредвиденная ошибка",
   "AbrLanguage": "Рус",
-  "LogIn": "Войти"
+  "LogIn": "Войти",
+  "InputUsername": "Введите логин",
+  "InputPassword": "Введите пароль"
 }
