Создание фичи авторизации

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,8 @@
   "AbrLanguage": "EN",
   "LogIn": "Log in",
   "InputUsername": "Input username",
-  "InputPassword": "Input password"
+  "InputPassword": "Input password",
+  "AuthFormTitle": "Authorization form",
+  "AuthorizationError": "You entered an incorrect username or password",
+  "LogOut": "Logout"
 }
