Профиль. Оптимизация перерисовок (memo). Реструктуризация Sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,6 @@
   "InputPassword": "Input password",
   "AuthFormTitle": "Authorization form",
   "AuthorizationError": "You entered an incorrect username or password",
-  "LogOut": "Logout"
+  "LogOut": "Logout",
+  "ProfileLink": "Profile"
 }
