--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,7 @@
   "AuthFormTitle": "Форма авторизации",
   "AuthorizationError": "Вы ввели неверный логин или пароль",
   "LogOut": "Выйти",
-  "ProfileLink": "Профиль"
+  "ProfileLink": "Профиль",
+  "Currency": "Валюта",
+  "Country": "Страна"
 }
