--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -10,5 +10,10 @@
   "City": "Город",
   "Age": "Возраст",
   "Username": "Имя пользователя",
-  "Avatar": "Аватар"
+  "Avatar": "Аватар",
+  "IncorrectAge": "Неверный возраст",
+  "IncorrectUserData": "Имя и фамилия обязательны",
+  "IncorrectCountry": "Неверная страна",
+  "NoData": "Данные не указаны",
+  "ServerError": "Ошибка сервера при действии"
 }
