Сущность статьи и соотвествующий UI

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,6 @@
   "LogOut": "Logout",
   "ProfileLink": "Profile",
   "Currency": "Currency",
-  "Country": "Country"
+  "Country": "Country",
+  "ArticleLink" : "Articles"
 }
