--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,6 @@
   "LogOut": "Выйти",
   "ProfileLink": "Профиль",
   "Currency": "Валюта",
-  "Country": "Страна"
+  "Country": "Страна",
+  "ArticleLink" : "Статьи"
 }
