--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -1,4 +1,5 @@
 {
   "ArticleNotFound": "Статья не найдена",
-  "ErrorLoadArticle": "Произошла ошибка при загрузке данных статьи"
+  "ErrorLoadArticle": "Произошла ошибка при загрузке данных статьи",
+  "Comments": "Комментарии"
 }
