Доработка CommentCard и CommentList

--- a/public/locales/ru/comment.json
+++ b/public/locales/ru/comment.json
@@ -1,3 +1,5 @@
 {
-    "NoComments": "Комментарии отсутствуют"
+  "NoComments": "Комментарии отсутствуют",
+  "SendComment": "Отправить",
+  "EnterCommentText": "Введите текст комментария"
 }
