--- a/public/locales/en/comment.json
+++ b/public/locales/en/comment.json
@@ -1,3 +1,5 @@
 {
-    "NoComments": "Комментарии отсутствуют"
+  "NoComments": "Комментарии отсутствуют",
+  "SendComment": "Send",
+  "EnterCommentText": "Enter comment text"
 }
