--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -1,5 +1,7 @@
 {
   "ArticleNotFound": "Статья не найдена",
   "ErrorLoadArticle": "Произошла ошибка при загрузке данных статьи",
-  "Comments": "Комментарии"
+  "Comments": "Комментарии",
+  "ContinueReading": "Читать далее...",
+  "BackToList": "Обратно к списку"
 }
