--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -16,5 +16,6 @@
   "IT": "IT",
   "Economics": "Economics",
   "Science": "Science",
-  "NotFound": "Articles not found"
+  "NotFound": "Articles not found",
+  "Recommendations": "Recommendations"
 }
