--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -16,5 +16,6 @@
   "IT": "Aйти",
   "Economics": "Экономика",
   "Science": "Наука",
-  "NotFound": "Статьи не найдены"
+  "NotFound": "Статьи не найдены",
+  "Recommendations": "Рекомендации"
 }
