Заготовка для создания и редактирования статьи

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -17,5 +17,6 @@
   "Economics": "Economics",
   "Science": "Science",
   "NotFound": "Articles not found",
-  "Recommendations": "Recommendations"
+  "Recommendations": "Recommendations",
+  "Edit": "Edit"
 }
