--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -17,5 +17,6 @@
   "Economics": "Экономика",
   "Science": "Наука",
   "NotFound": "Статьи не найдены",
-  "Recommendations": "Рекомендации"
+  "Recommendations": "Рекомендации",
+  "Edit": "Редактировать"
 }
