--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,7 @@
   "ProfileLink": "Профиль",
   "Currency": "Валюта",
   "Country": "Страна",
-  "ArticleLink" : "Статьи"
+  "ArticleLink": "Статьи",
+  "LogoText": "Skuld",
+  "CreateArticle": "Создать статью"
 }
