Библиотека HeadlessUi и создание ListBox

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,7 +15,9 @@
   "LogOut": "Logout",
   "ProfileLink": "Profile",
   "Currency": "Currency",
+  "SelectCurrency": "Select currency",
   "Country": "Country",
+  "SelectCountry": "Select country",
   "ArticleLink": "Articles",
   "LogoText": "Skuld",
   "CreateArticle": "Create article"
