--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,7 +15,9 @@
   "LogOut": "Выйти",
   "ProfileLink": "Профиль",
   "Currency": "Валюта",
+  "SelectCurrency": "Укажите валюту",
   "Country": "Страна",
+  "SelectCountry": "Укажите страну",
   "ArticleLink": "Статьи",
   "LogoText": "Skuld",
   "CreateArticle": "Создать статью"
