--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,5 +22,8 @@
   "LogoText": "Skuld",
   "CreateArticle": "Создать статью",
   "AdminLink": "Панель администратора",
-  "PageAccessDenied": "Доступ к странице запрещен"
+  "PageAccessDenied": "Доступ к странице запрещен",
+  "YourFeedback": "Ваш отзыв",
+  "Close": "Закрыть",
+  "Send": "Отправить"
 }
