--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -19,5 +19,7 @@
   "Science": "Science",
   "NotFound": "Articles not found",
   "Recommendations": "Recommendations",
-  "Edit": "Edit"
+  "Edit": "Edit",
+  "RateTheArticle": "Rate the article",
+  "RateFeedback": "Leave your feedback about the article, it will help improve the quality"
 }
