--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,5 +25,6 @@
   "PageAccessDenied": "Page access denied",
   "YourFeedback": "Your feedback",
   "Close": "Close",
-  "Send": "Send"
+  "Send": "Send",
+  "YourRate": "Your rate:"
 }
