--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -19,5 +19,7 @@
   "Science": "Наука",
   "NotFound": "Статьи не найдены",
   "Recommendations": "Рекомендации",
-  "Edit": "Редактировать"
+  "Edit": "Редактировать",
+  "RateTheArticle": "Оцените статью",
+  "RateFeedback": "Оставьте свой отзыв о статье, это поможет улучшить качество"
 }
