--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -25,5 +25,6 @@
   "PageAccessDenied": "Доступ к странице запрещен",
   "YourFeedback": "Ваш отзыв",
   "Close": "Закрыть",
-  "Send": "Отправить"
+  "Send": "Отправить",
+  "YourRate": "Ваша оценка:"
 }
