Практическое применение настроек в JSON Добавление страницы привествия на страницу статей

--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -21,5 +21,7 @@
     "Recommendations": "Рекомендации",
     "Edit": "Редактировать",
     "RateTheArticle": "Оцените статью",
-    "RateFeedback": "Оставьте свой отзыв о статье, это поможет улучшить качество"
+    "RateFeedback": "Оставьте свой отзыв о статье, это поможет улучшить качество",
+    "ArticlePageGreetingTitle": "Добро пожаловать на страницу статей",
+    "ArticlePageGreetingText": "Здесь вы можете искать и просматривать статьи на различные темы."
 }
