--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,5 +26,10 @@
     "YourFeedback": "Your feedback",
     "Close": "Close",
     "Send": "Send",
-    "YourRate": "Your rate:"
+    "YourRate": "Your rate:",
+    "UserSettings": "User settings",
+    "NewDesign": "New design",
+    "OldDesign": "Old design",
+    "Design": "Design",
+    "SettingsLink": "Settings"
 }
